--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@
     height: 500px;
     overflow-x: unset;
     overflow-y: auto;
-
 }
 .content>ul{
     list-style: inside;
@@ -48,3 +47,22 @@
     background-color:rgba(57, 57, 57, 0.247);
 }
 
+.box-shadow-note {
+    box-shadow: rgba(14, 30, 37, 0.22) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.box-shadow-component {
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.max-h-watch {
+    max-height: 400px;
+}
+
+@media only screen and (max-width: 1320px) {
+    .Text-Editor {
+        height: 300px;
+        max-height: 300px;
+        overflow-y: auto;
+    }
+}
